--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "worldhaven",
   "version": "1.0.0",
   "scripts": {
-    "images": "ts-node images"
+    "images": "ts-node images",
+    "cards": "ts-node cards"
   },
   "dependencies": {
     "cwebp": "^2.0.5",
-    "jimp": "^0.16.1"
+    "jimp": "^0.16.1",
+    "title-case": "^3.0.3"
   },
   "devDependencies": {
     "@types/node": "^18.6.2",
