--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,7 @@
         "forceConsistentCasingInFileNames": true,
         "noEmit": true,
         "esModuleInterop": true,
+        "resolveJsonModule": true,
         "baseUrl": "."
     }
 }
