--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,6 @@
         "noEmit": true,
         "esModuleInterop": true,
         "resolveJsonModule": true,
-        "baseUrl": "."
+        "baseUrl": "src"
     }
 }
