--- a/package.json
+++ b/package.json
@@ -4,14 +4,17 @@
   "scripts": {
     "images": "ts-node src/images",
     "cards": "ts-node src/cards",
-    "enhc": "ts-node src/enhancements"
+    "enhc": "ts-node src/enhancements",
+    "items": "ts-node src/items"
   },
   "dependencies": {
     "cwebp": "^2.0.5",
     "jimp": "^0.16.1",
+    "lodash.startcase": "^4.4.0",
     "title-case": "^3.0.3"
   },
   "devDependencies": {
+    "@types/lodash.startcase": "^4.4.7",
     "@types/node": "^18.6.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
